--- a/src/pages/realtimenav/realtimenav.html
+++ b/src/pages/realtimenav/realtimenav.html
@@ -1,18 +1,12 @@
-<!--
-  Generated template for the RealtimenavPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>realtimenav</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+    <div class="map-wrapper">
 
+        <maps #map [dispalycomponent]="dispalycomponent">
+
+        </maps>
+    </div>
 </ion-content>
+<content-drawer [options]="drawerOptions">
+    <div class="content">
+    </div>
+</content-drawer>
