--- a/src/pages/historique/historique.html
+++ b/src/pages/historique/historique.html
@@ -11,12 +11,29 @@
 <ion-content padding id="page11">
     <ion-list id="historique-list10">
         <ion-item-sliding>
-            <ion-item color="none" id="historique-list-item32" *ngFor="let item of item">
+            <ion-item color="none" id="historique-list-item32" *ngFor="let item of jsonObj">
                 <ion-thumbnail item-left   >
                     <img />
                 </ion-thumbnail>
                 <h2>
-                    {{item.title}}
+                    {{item.idDelivery}}
+                </h2>
+                <h2>
+                    {{item.costDelivery}}
+                </h2>
+                <h2>
+                    {{item.destDelivery.lat}}
+                    {{item.destDelivery.lng}}
+                </h2>
+                <h2>
+                    {{item.sourceDelivery.lat}}
+                    {{item.sourceDelivery.lng}}
+                </h2>
+                <h2>
+                    {{item.timingDelivery}}
+                </h2>
+                <h2>
+                    {{item.packageDelivery}}
                 </h2>
             </ion-item>
             <ion-item-options side="left">
