--- a/src/pages/corbeille/corbeille.html
+++ b/src/pages/corbeille/corbeille.html
@@ -9,22 +9,5 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page12">
-    <!-- <ion-list id="corbeille-list15">
-    <ion-item-sliding>
-      <ion-item color="none" id="corbeille-list-item41">
-        <ion-thumbnail item-left>
-          <img />
-        </ion-thumbnail>
-        <h2>
-          Item
-        </h2>
-      </ion-item>
-      <ion-item-options side="left">
-        <button ion-button color="positive"></button>
-        <button ion-button color="assertive"></button>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list> -->
-
-
+    <button ion-button block (click)="goToRealTime()">mappppppp</button>
 </ion-content>
