--- a/src/pages/realtimenav/realtimenav.html
+++ b/src/pages/realtimenav/realtimenav.html
@@ -1,3 +1,12 @@
+<ion-header>
+
+    <ion-navbar>
+        <ion-title>Real Time</ion-title>
+    </ion-navbar>
+
+</ion-header>
+
+
 <ion-content padding>
     <div class="map-wrapper">
 
@@ -5,6 +14,7 @@
 
         </maps>
     </div>
+    <realtimenav #realtimenav></realtimenav>
 </ion-content>
 <content-drawer [options]="drawerOptions">
     <div class="content">
