--- a/src/pages/adresses-privee/adresses-privee.html
+++ b/src/pages/adresses-privee/adresses-privee.html
@@ -21,7 +21,7 @@
                     <img />
                 </ion-thumbnail>
                 <h2>
-                        {{item.idAdress}}
+                    {{item.labelAdr}}
                 </h2>
             </ion-item>
             <ion-item-options side="left">
