--- a/src/pages/adresses-publique/adresses-publique.html
+++ b/src/pages/adresses-publique/adresses-publique.html
@@ -20,7 +20,7 @@
                 <img />
             </ion-thumbnail>
             <h2>
-                {{item.idAdress}}
+                {{item.labelAdr}}
             </h2>
         </ion-item>
     </ion-list>
